[project]
name = "restore-original-color"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "ruff>=0.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff.lint]
extend-select=["I"]
